# Space-Wars

./: CMakeLists.txt  README.md  main.cpp  sfml_install.in  tgui_install.in
SFML-2.5.1/include/SFML/Graphics/: Glsl.inl  Image.hpp  RenderStates.hpp  RenderTarget.hpp  RenderTexture.hpp  RenderWindow.hpp
SFML-2.5.1/share/SFML/doc/html/: classsf_1_1Image.html  classsf_1_1RenderStates.html  classsf_1_1RenderTexture.html  classsf_1_1RenderWindow.html  classsf_1_1Sound.html
docs/: README.md
includes/: Background.hpp  Bullet.hpp  BulletMover.hpp  EnemiesContainer.hpp  EnemyCreator.hpp  EnemyMover.hpp  Game.hpp  Gun.hpp  IBulletBuilder.hpp  ICartridgeBuilder.hpp  IDrawable.hpp  IGun.hpp  IObjectMover.hpp  IState.hpp  MenuState.hpp  PauseSubstate.hpp  PlayState.hpp  Player.hpp  PlayerCartridgeBuilder.hpp  PlayerGun.hpp  PlayerMover.hpp  PlayerSpaceship.hpp  Randomizer.hpp  RunningSubstate.hpp  Settings.hpp  SpaceShip.hpp  Spaceship.hpp  StateResponse.hpp  StockGun.hpp  StockPlayerCartridgeBuilder.hpp
src/: Background.cpp  Bullet.cpp  BulletMover.cpp  EnemiesContainer.cpp  EnemyCreator.cpp  EnemyMover.cpp  Game.cpp  Gun.cpp  ICartridgeBuilder.cpp  MenuState.cpp  PauseSubstate.cpp  PlayState.cpp  Player.cpp  PlayerCartridgeBuilder.cpp  PlayerGun.cpp  PlayerMover.cpp  PlayerSpaceship.cpp  Randomizer.cpp  RunningSubstate.cpp  SpaceShip.cpp  Spaceship.cpp  StockGun.cpp  StockPlayerCartridgeBuilder.cpp
tests/: RunTest.cpp  TestIDrawables.hpp
